<resources>
    <string name="app_name" translatable="false">Fluid Wallpaper</string>
    <string name="applovin_sdk_key">applovin_sdk_key</string>
    <string name="first_check">I understand that sharing of inappropriate content will not be tolerated.</string>
    <string name="second_check">I confirm that Im 18 years old or above.</string>
    <string name="clickforprivacy">"By Clicking 'Get Started'. You are agree to above Terms of Use and Privacy Policy. "</string>
    <string name="wallpaper_description">Image Wallpaper</string>
    <string name="LOADING">Loading...</string>
    <string name="_5">5</string>
    <string name="_5_seconds_remaining">5 Seconds Remaining</string>
    <string name="adjust_token_key">4bpd8e4v6wu8</string>
    <string name="advertisement">Advertisement</string>
    <string name="apply">Apply</string>
    <string name="arabic">Arabic</string>
    <string name="bengali">Bengali</string>
    <string name="connect_internet">Please Connect To Internet</string>
    <string name="continue_to_app">Continue to app</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="default_message">Check your Internet connection and try again.</string>
    <string name="default_title">No Internet</string>
    <string name="defaults">default</string>
    <string name="define_easypreferences" />
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="english">English</string>
    <string name="fluid">Fluid</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="hindi">Hindi</string>
    <string name="indonesian">Indonesian</string>
    <string name="install_now">Install Now</string>
    <string name="intro_1">Discover the magic of fluid wallpapers at your fingertips</string>
    <string name="intro_2">Set wallpaper for the main screen and lock screen</string>
    <string name="intro_3">Collection of 4K fluid live wallpaper for you</string>
    <string name="italian">Italian</string>
    <string name="korean">Korean</string>
    <string name="language">Select Your Language</string>
    <string name="location_permission_missing_message">Looks like this app doesn\'t have location services configured. Please see OneSignal docs for more information.</string>
    <string name="location_permission_missing_title">App Missing Permission</string>
    <string name="location_permission_name_for_title">Location</string>
    <string name="location_permission_settings_message">sharing your device location</string>
    <string name="next">Next</string>
    <string name="please_turn_on">Please turn on</string>
    <string name="portuguese">Portuguese</string>
    <string name="retry">Retry Again</string>
    <string name="russian">Russian</string>
    <string name="spanish">Spanish</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tt_00_00">00:00</string>
    <string name="tt_ad_clicked_text">Ad shown</string>
    <string name="tt_ad_close_text">Ad closed</string>
    <string name="tt_ad_data_error">Response data error</string>
    <string name="tt_ad_is_closed">Ads Closed</string>
    <string name="tt_ad_logo_txt">AD</string>
    <string name="tt_ad_showed_text">Ad showed</string>
    <string name="tt_adslot_empty">No request ad slot</string>
    <string name="tt_adslot_id_error">Illegal ad slot id</string>
    <string name="tt_adslot_size_empty">Empty ad slot size</string>
    <string name="tt_adtype_not_match_rit">Ad slot id error</string>
    <string name="tt_app_empty">No request app</string>
    <string name="tt_app_name">tt_open_ad_sdk</string>
    <string name="tt_auto_play_cancel_text">Cancel</string>
    <string name="tt_banner_ad_load_image_error">Banner loading failed</string>
    <string name="tt_cancel">Cancel</string>
    <string name="tt_choose_language">en</string>
    <string name="tt_click_to_replay">Tap to replay</string>
    <string name="tt_comment_num">%1$s reviews</string>
    <string name="tt_comment_num_backup">%1$s reviews</string>
    <string name="tt_comment_score">Evaluation</string>
    <string name="tt_confirm_download">Are you sure to download when using non-Wifi network?</string>
    <string name="tt_confirm_download_have_app_name">Prepare to download %s</string>
    <string name="tt_content_type">Http content type error</string>
    <string name="tt_count_down_view">Skip</string>
    <string name="tt_dislike_header_tv_back">Back</string>
    <string name="tt_dislike_header_tv_title">Select</string>
    <string name="tt_display_error">Display error</string>
    <string name="tt_error_access_method_pass">Illegal access method</string>
    <string name="tt_error_ad_able_false_msg">Prohibit request ads by compliance, please check COPPA/CCPA/GDPR settings</string>
    <string name="tt_error_ad_sec_false_msg">Security Check Failed</string>
    <string name="tt_error_ad_type">Illegal ad type</string>
    <string name="tt_error_adtype_differ">Ad type error</string>
    <string name="tt_error_apk_sign_check_error">Illegal apk sha1 value</string>
    <string name="tt_error_bidding_type">Placement is not bidding type, please check placement bidding type</string>
    <string name="tt_error_code_adcount_error">Incorrect number of ad</string>
    <string name="tt_error_code_click_event_error">Click event error</string>
    <string name="tt_error_device_ip">Please check the country of the IP of the ad requesting device in service country</string>
    <string name="tt_error_empty_content">IP is empty or ua is empty</string>
    <string name="tt_error_image_size">Illegal image size</string>
    <string name="tt_error_interstitial_version">The sdk version used for the new insertion style is too low. Please upgrade to version 3550 and above</string>
    <string name="tt_error_media_id">Illegal media id</string>
    <string name="tt_error_media_type">Illegal media type</string>
    <string name="tt_error_new_register_limit">New ad slot exceeded daily request limit</string>
    <string name="tt_error_origin_ad_error">Origin type error</string>
    <string name="tt_error_package_name">Package name error</string>
    <string name="tt_error_redirect">Redirect error</string>
    <string name="tt_error_request_invalid">Invalid request</string>
    <string name="tt_error_slot_id_app_id_differ">SlotId and AppId match error</string>
    <string name="tt_error_splash_ad_type">Splash ad type error</string>
    <string name="tt_error_union_os_error">Os type error</string>
    <string name="tt_error_union_sdk_too_old">Sdk version too low</string>
    <string name="tt_error_unknow">Unknown error</string>
    <string name="tt_error_update_version">Please update to version 2310 or later</string>
    <string name="tt_error_verify_reward">Reward verify error</string>
    <string name="tt_feedback_experience_text">We\'ll continue to improve our service.</string>
    <string name="tt_feedback_submit_text">You\'ve submitted feedback! Please don\'t submit again.</string>
    <string name="tt_feedback_thank_text">Thanks for your feedback!</string>
    <string name="tt_frequent_call_erroe">Ad requests are too frequent</string>
    <string name="tt_full_screen_skip_tx">Skip</string>
    <string name="tt_get_reward">Get reward</string>
    <string name="tt_init_setting_config_not_complete">Setting initialization is not completed</string>
    <string name="tt_insert_ad_load_image_error">Interstitial loading failed</string>
    <string name="tt_label_cancel">Cancel</string>
    <string name="tt_label_ok">OK</string>
    <string name="tt_lack_android_manifest_configuration">Initialization check error, please check the AndroidManifest</string>
    <string name="tt_load_creative_icon_error">Icon loading failed</string>
    <string name="tt_load_creative_icon_response_error">Icon loading error</string>
    <string name="tt_load_failed_text">Load fail</string>
    <string name="tt_load_success_text">Load success</string>
    <string name="tt_loading_language">Landing page loading……</string>
    <string name="tt_logo_cn">AD</string>
    <string name="tt_logo_en">Ad</string>
    <string name="tt_msgPlayable">Finish playing to get rewards</string>
    <string name="tt_negtiveBtnBtnText">Leave</string>
    <string name="pion_tech">Pion Tech</string>
    <string name="why_do_you_see_ads">Why do you see Ads?</string>
    <string name="for_production_and_development_we_need_funding_one_of_which_comes_from_advertisment_revenue">For production and development, we need funding, one of which comes from advertisment revenue</string>
    <string name="what_can_you_do">What can you do?</string>
    <string name="ads_what_can_you_do_content">1. To remove ads, you can support us by purchasing the premium version or the ad-removed version.\n\n2. Contact us by email to be considered for participation in the pilot program, from which you can use versions with less ads but may not be optimized for performance.</string>
    <string name="what_ads_type_do_we_use">What Ads type do we use?</string>
    <string name="type_ads_title">We are associated with many ad network partners and the largest is Google Ad for major ad formats\n\n- Full screen ads interspersed between screens\n- Banner, native ads are customized as a component of AD (usually with a yellow label)</string>
    <string name="we_are_always_trying_to_balance_the_user_experience_and_advertisment">We are always trying to balance the user experience and advertisment</string>
    <string name="store_name">Store Name:</string>
    <string name="website">Website:</string>
    <string name="https_piontech_co">https://piontech.co</string>
    <string name="facebook">Facebook:</string>
    <string name="telegram">Telegram:</string>
    <string name="piontechglobal">" @piontechglobal"</string>
    <string name="setting_note_content">- You can completely use the core features of the application without paying any fees \n- If you clear the data of the application, the ad may appear again once when relaunching the application.</string>
    <string name="your_feedback_is_useful">Your feedback is useful</string>
    <string name="others">Others</string>
    <string name="submit">Submit</string>
    <string name="_1_about">1. About</string>
    <string name="for_a_better_experience_we_provide_enhanced_versions_or_remove_ads">For a better experience, we provide enhanced versions or remove ads.</string>
    <string name="_2_how_to_buy">2.How to buy?</string>
    <string name="case_of_refund">- The application does not work as described \n- Application crashes after payment \n- The app still shows ads after successful payment</string>
    <string name="step_refund">Step1: Contact us via email "piontech.feedback@gmail.com" with title "About refund Issue" \n\nStep2: provide us with the e-invoice, which will have the ID "GPA.33..." in the email you used to pay with google pay\n\nStep3: We will check the problems you have, if it is in the "refund approved cases", we will process it in about 3-5 working days depending on the actual conditions.\n\nThe amount after refund will be processed by google\'s system and transferred back to your e-wallet.</string>
    <string name="_3_how_to_refund">3. How to refund?</string>
    <string name="_4_cases_of_refund_acceptance">4. Cases of Refund Acceptance</string>
    <string name="select_remove_ad_icon_and_press_buy_we_will_accept_your_payment_through_google_pay_system">Select remove ad icon and press buy, we will accept your payment through google pay system</string>
    <string name="note">Note:</string>
    <string name="the_transparent_wallpaper_feature_is_not_working">The transparent wallpaper feature is not working</string>
    <string name="the_fluid_wallpaper_feature_is_also_not_working">The fluid wallpaper feature is also not working</string>
</resources>