<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_radius_10"
            android:backgroundTint="#191A19"
            android:layout_marginHorizontal="@dimen/_27dp"
            android:paddingHorizontal="@dimen/_27dp"
            android:paddingBottom="@dimen/_25dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21dp"
                android:fontFamily="@font/font_700"
                android:text="@string/your_feedback_is_useful"
                android:textColor="#FFD656"
                android:textSize="@dimen/_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_title_feedback"
                app:layout_constraintTop_toBottomOf="@id/tv_title_feedback">

                <RadioButton
                    android:id="@+id/radio_unable_to_save_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFD656"
                    android:text="@string/the_transparent_wallpaper_feature_is_not_working"
                    android:fontFamily="@font/font_400"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sp" />

                <RadioButton
                    android:id="@+id/radio_sharp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_fluid_wallpaper_feature_is_also_not_working"
                    android:buttonTint="#FFD656"
                    android:layout_marginTop="@dimen/_7dp"
                    android:fontFamily="@font/font_400"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sp" />

                <RadioButton
                    android:id="@+id/radio_others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7dp"
                    android:buttonTint="#FFD656"
                    android:fontFamily="@font/font_400"
                    android:text="@string/others"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40dp"
                android:layout_marginHorizontal="@dimen/_27dp"
                android:layout_marginTop="@dimen/_10dp"
                android:fontFamily="@font/font_700"
                android:gravity="center"
                android:background="@drawable/bg_apply_iap"
                android:text="@string/submit"
                android:textColor="#FFD656"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/radio_group" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>